--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.btn {
   color: white;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  margin: 5px;
+  background-color: #4CAF50;
+  display: flex;
+  align-items: center;
+  height: 40px;
+  padding: 0 15px;
+  cursor: pointer;
+  border-radius: 3px;
 }
 
-.App-link {
-  color: #61dafb;
+.btn:hover {
+  background-color: #6ec071;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn.disabled {
+  background-color: #555555;
+  cursor: not-allowed;
+}
+
+.btn:focus {
+  border: 3px solid black;
+}
+
+img {
+  width: 24px;
+  height: 24px;
+  margin: 0 5px;
 }
